Standardise header height throughout products to fix sidebar shifting

--- a/app/webpacker/src/stylesheets/metronic/css/layout.scss
+++ b/app/webpacker/src/stylesheets/metronic/css/layout.scss
@@ -64,9 +64,9 @@ h1.header-bold {
   position: sticky;
   overflow-y: auto;
   overflow-x: hidden;
-  top: 48px;
+  top: 60px;
   bottom: 0;
-  height: calc(100vh - 48px);
+  height: calc(100vh - 60px);
 }
 
 // Sidebar-items hover effect
